--- a/package.json
+++ b/package.json
@@ -16,13 +16,31 @@
     "any-observable": "0.2.0",
     "chalk": "2.4.1",
     "check-dependencies": "1.1.0",
+    "is-online": "7.0.0",
     "listr": "0.14.1",
     "redent": "2.0.0",
     "trim-newlines": "2.0.0"
   },
   "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-jest": "22.4.3",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-flow": "6.23.0",
+    "babel-runtime": "^6.26.0",
+    "coveralls": "3.0.0",
     "np": "3.0.4",
-    "prettier": "1.13.4"
+    "nyc": "11.7.1",
+    "prettier": "1.13.4",
+    "pretty-quick": "1.6.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/**/testHelpers.{js,jsx}",
+      "!src/StyleSheet/ruleParserPlugin.{js,jsx}"
+    ]
   },
   "engines": {
     "node": ">=8"
