--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,4 @@ install:
   - npm install
 
 script:
-  - npm run test
-  - npm run build
-
-after_success:
-  - npm run coverage
+  - npm run pendo
